--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ h6 {
   position: absolute;
   top: 0;
   left: 0;
-  filter: grayscale(1) opacity(0.2) brightness(0.5);
+  opacity: .4;
   z-index: -1;
 }
 
@@ -314,7 +314,7 @@ a:hover {
 #services {
   height: 90vh;
 }
-
+.shadow,
 #services::before,
 #services::after {
   content: "";
@@ -331,7 +331,7 @@ a:hover {
 #services::before {
   left: 0;
 }
-
+.shadow:last-of-type,
 #services::after {
   background-image: linear-gradient(-90deg, var(--base), transparent);
   right: 0;
@@ -443,14 +443,14 @@ a:hover {
   justify-content: center;
 }
 
-.service__name {
+h4, .service__name {
   position: relative;
   text-transform: uppercase;
   font-size: 1.2rem;
   font-weight: 700;
   opacity: 0.76;
   z-index: 12;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .service--more {
@@ -817,7 +817,7 @@ a:hover {
   content: "";
   position: absolute;
   width: calc(100% - var(--mn-pad) * 2);
-  box-shadow: 0 0 16px 4px rgba(255, 191, 40, 0.397);
+  box-shadow: 0 0 16px 4px #1d1d495e;
   height: 50vh;
 }
 
@@ -867,12 +867,9 @@ a:hover {
   /* clip-path: none; */
 }
 
-.card--info:hover * {
-  color: var(--light);
-}
 .card--info:hover .card__img {
-  filter: grayscale(10%) brightness(0.4);
-  opacity: 1;
+  filter: grayscale(10%) brightness(100%);
+  opacity: 0.4;
 }
 
 details {
@@ -1075,7 +1072,7 @@ address {
   width: calc(var(--w) + var(--sm-pad));
   flex-basis: 80%;
   margin-left: calc(var(--sm-pad) * -1);
-  display: none;
+  display: flex;
   flex-wrap: nowrap;
 
   overflow-x: scroll;
@@ -1146,7 +1143,10 @@ address {
   cursor: grab;
   background-color: var(--base);
 }
-
+.list__item:empty{
+  background: transparent !important;
+  cursor: none;
+}
 .wide-list .list__item {
   /* Card width is container width minus the gap between it's siblings all divided by number of cards  */
   --card-width: calc((var(--w) - var(--gap)) / 3);
@@ -1227,7 +1227,32 @@ address {
 #btnRequestProdQoute {
   display: none;
 }
+.project__list {
+  width: calc(100vw);
+  overflow: scroll;
+}
+.project {
+  width: 28vw !important;
+  background-color: #fff !important;
+  display: flex;
 
+  justify-content: flex-end !important;
+}
+.project__details{
+  position: relative;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.project__details::before{
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  background-color: var(--gold);
+  left: -36px;
+}
 /* REGION: Mobile */
 @media screen and (max-width: 678px) {
   :root {
