fixed email modal error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   --gold: #ccb322;
   --navy: #1d1d49;
   --gray: #575757;
-  --base: #f2f2f2;
+  --base: #fafafa;
   --light: #ffffff;
 
   --mn-pad: 7vw;
@@ -664,8 +664,8 @@ h4,
   height: 40vh;
   /* margin-bottom: 5vh; */
 }
-.hero-img{
-  opacity: .08 !important;
+.hero-img {
+  opacity: 0.08 !important;
 }
 .hero__head {
   font-family: "Poppins black";
@@ -1239,7 +1239,7 @@ address {
 
 .project__list::-webkit-scrollbar-thumb {
   background-color: rgb(182, 182, 182);
-  opacity: .3;
+  opacity: 0.3;
 }
 
 .project {
@@ -1274,13 +1274,13 @@ address {
   grid-template: 1fr / 1fr 1fr;
   padding: 5vh 6vw;
   height: 50vh;
-  background-color: var(--light)
+  background-color: var(--light);
 }
 .knife {
   height: min-content;
   z-index: 2;
 }
-.knife:first-child{
+.knife:first-child {
   z-index: 10;
 }
 .knife:nth-of-type(even) {
@@ -1291,7 +1291,7 @@ address {
   width: 60%;
   height: 100%;
   filter: none;
-  opacity: .5;
+  opacity: 0.5;
   clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
   z-index: -4;
 }
