--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ html {
   font-family: "Poppins";
   overflow-x: hidden;
 
-  font-size: 13px;
+  font-size: 15px;
 
   scroll-behavior: smooth;
 }
@@ -64,6 +64,7 @@ h6 {
 p {
   margin-bottom: 1rem;
   color: var(--navy);
+  font-weight: normal;
 }
 /* #END-REGION TYPOGRAPHY */
 
@@ -179,7 +180,7 @@ a:hover {
 .btn {
   height: 4rem;
   padding: 1rem 2rem;
-  margin: 1rem 0;
+  margin: 2rem 0;
   padding: 1rem 2rem;
   cursor: pointer;
   border: none;
@@ -187,6 +188,7 @@ a:hover {
   cursor: pointer;
   text-transform: uppercase;
   filter: brightness(1);
+  font-family: "Poppins";
 }
 
 .btn:hover {
@@ -238,10 +240,10 @@ a:hover {
   justify-content: space-between;
   align-items: center;
   z-index: 2;
+  background-color: rgba(255, 255, 255, 0.39);
 }
 
 .nav--up {
-  background-color: rgba(255, 255, 255, 0.86);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -295,8 +297,7 @@ a:hover {
   position: fixed;
   width: 100vw;
   height: 95vh;
-  padding-left: var(--mn-pad);
-  padding-bottom: var(--sm-pad);
+  padding: var(--nav-height) var(--mn-pad);
   flex-direction: column;
   justify-content: space-between;
   background-color: transparent;
@@ -394,7 +395,7 @@ a:hover {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: transparent;
+  iackground-color: transparent;
   position: absolute;
   opacity: 0.5;
   background-color: var(--light);
@@ -563,6 +564,7 @@ h4,
 .member__details h4 {
   text-transform: none;
   font-weight: bold;
+  margin-bottom: 0;
 }
 
 .member:nth-of-type(even) .member__details {
@@ -581,12 +583,14 @@ h4,
 }
 
 .tag {
-  font-style: 10px !important;
+  display: block;
   color: var(--navy);
+  margin-bottom: 0.5rem;
 }
 
 .member__qoute {
-  opacity: 0.86;
+  color: #11112c;
+  font-weight: normal;
 }
 #map,
 #contact {
@@ -633,8 +637,10 @@ h4,
   border: none;
   margin: 0;
   padding: 8px;
+  padding-left: 16px;
   text-indent: 8px;
   border-bottom: none;
+  font-family: "Poppins";
 }
 
 .input--area {
@@ -682,9 +688,8 @@ h4,
   grid-template-columns: 1fr 160px;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.16);
 }
-#hero__form * {
+#hero__form > * {
   margin: 0;
-  padding: 0;
 }
 
 /* end buttons */
@@ -692,19 +697,14 @@ h4,
 .social-icons {
   display: grid;
   grid-auto-flow: column;
-  grid-gap: 16px;
+  grid-gap: 1rem;
   width: min-content;
   height: 1rem;
 }
 
 .icon {
-  width: 10px;
-  height: 10px;
-  text-align: center;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-content: center;
 }
 
 .icon:hover {
@@ -778,7 +778,7 @@ h4,
   text-align: center;
   margin: 1rem auto;
   margin-top: -1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 3.5vh;
   padding: 0;
 }
 
@@ -825,7 +825,6 @@ h4,
 }
 .card__body {
   font-weight: normal;
-  opacity: 0.9;
 }
 .card--info .card__img {
   position: absolute;
@@ -1370,10 +1369,6 @@ address {
     transform: scaleY(100%);
     opacity: 0.16;
     transform-origin: right;
-  }
-
-  .nav__links .link {
-    height: 4rem;
   }
 
   .menu--chk::before {
