--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1223,7 +1223,7 @@ address {
   display: none;
 }
 .project__list {
-  width: calc(100vw);
+  width: calc(100vw + var(--sm-pad));
   overflow: scroll;
 }
 
@@ -1427,15 +1427,15 @@ address {
   }
 
   .wide-list .list__item {
-    width: calc(var(--card-width) * 3);
+    width: calc(var(--card-width) * 3.5) !important;
   }
 
   .container--short {
     height: 100vh;
   }
 
-  .card--overlap {
-    height: 100%;
+  .card--info:first-of-type {
+    width: 100%;
   }
 
   .hr-list {
@@ -1443,7 +1443,7 @@ address {
     grid-auto-flow: row;
     grid-template: 1fr 1fr/ 1fr;
     grid-gap: 0px;
-    height: 80%;
+    height: 50vh;
     margin-top: 0;
   }
 
@@ -1484,6 +1484,10 @@ address {
   .service::before {
     width: 100%;
     height: 100%;
+  }
+
+  .service--more {
+    width: 100%;
   }
 
   #team {
