--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@
   padding: 0;
   box-sizing: border-box;
   transition: 400ms all ease-out;
+  outline: 1px solid green;
 }
 
 html {
@@ -227,6 +228,19 @@ a:hover {
 
 .menu--chk {
   display: none;
+}
+
+.with-checkbox span {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  margin-left: 1.2rem;
+  background-image: url("../images/icons/SVG/chk--not.svg");
+  background-size: cover;
+}
+.checked .with-checkbox span {
+  background-image: url("../images/icons/SVG/chk--checked.svg");
 }
 
 /* #REGION CONTROLS */
@@ -457,16 +471,22 @@ h4,
 
 .service--more {
   position: relative;
-  width: 8vw;
+  width: 40%;
+  max-width: 200px;
+  min-width: 120px;
   height: 2.4rem;
-  margin-top: 3rem;
   display: flex;
-  justify-content: center;
+  justify-content: start;
+  align-items: center;
   text-align: center;
   font-size: 1rem;
   opacity: 1;
-  color: var(--light);
-  background-color: var(--gold) !important;
+  color: var(--navy);
+  font-weight: 700;
+  background-color: #f3f3f5;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 .service--more::before {
   bottom: 0 !important;
@@ -907,11 +927,12 @@ details[open] summary {
 .link--more {
   outline: none;
   border: none;
+  width: 4rem !important;
+  font-weight: 700;
   cursor: pointer;
-  font-family: "Poppins SemiBold";
   display: flex;
   align-items: center;
-  background-color: transparent;
+  background-color: var(--gold);
   color: var(--navy);
 }
 .link--more::before {
@@ -989,7 +1010,7 @@ address {
   left: 50%;
   width: var(--w);
   height: 85vh;
-  background-color: var(--light);
+  background-color: #fdfdff;
   padding: var(--sm-pad);
   display: flex;
   flex-direction: column;
@@ -1064,16 +1085,18 @@ address {
 }
 
 .wide-list {
-  --gap: 1rem;
+  --gap: 2.5rem;
   position: relative;
   width: calc(var(--w) + var(--sm-pad));
-  flex-basis: 80%;
+  flex-basis: 100%;
   margin-left: calc(var(--sm-pad) * -1);
   display: flex;
+  align-items: center;
   flex-wrap: nowrap;
 
+  overflow: visible;
   overflow-x: scroll;
-  overflow-y: visible;
+  /* overflow-y: auto; */
   padding-left: calc(var(--sm-pad));
   margin-left: calc(var(--sm-pad) * -1);
   list-style: none;
@@ -1148,14 +1171,13 @@ address {
   --card-width: calc((var(--w) - var(--gap)) / 3);
   position: relative;
   width: var(--card-width);
-  height: 100%;
+  height: 90%;
   min-height: 35vh;
   margin-right: var(--gap);
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  background-color: black;
+  background-color: #fcfcfc;
   cursor: pointer;
   padding: 36px;
   transform: scale(0.98);
@@ -1165,15 +1187,17 @@ address {
   margin-right: var(--card-width);
 }
 
-.wide-list .list__item:hover {
+.wide-list .list__item:hover,
+.wide-list .list__item.checked {
+  background-color: #fff;
   transform: scale(1);
-  box-shadow: 0 0 8px rgba(255, 191, 40, 0.363);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
   z-index: 10;
 }
 
-.wide-list:hover .list__item:not(:hover) {
+/* .wide-list:hover .list__item:not(:hover) {
   filter: grayscale(1) brightness(0.7);
-}
+} */
 
 .enquiry__group {
   position: absolute;
