--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,8 @@ a:hover {
   text-transform: uppercase;
   filter: brightness(1);
   font-family: "Poppins";
+  font-weight: 700;
+  color: rgba(29, 29, 73, 0.849);
 }
 
 .btn:hover {
@@ -763,6 +765,9 @@ h4,
   display: grid;
   z-index: 1;
 }
+.card__actions .btn {
+  background-color: #f3f3f5 !important;
+}
 
 .card--overlap {
   position: relative;
@@ -1012,9 +1017,9 @@ address {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: var(--w);
-  height: 90vh;
-  background-color: #fdfdff;
+  width: 100vw;
+  height: 100vh;
+  background-color: hsla(240, 100%, 100%, 0.95);
   padding: var(--sm-pad);
   display: flex;
   flex-direction: column;
@@ -1133,6 +1138,10 @@ address {
   left: unset;
   right: -2px;
   transform: rotate(180deg);
+}
+
+.modal .list__item{
+  border: 1px solid rgba(242, 242, 249, 0.479);
 }
 
 .btn--outline {
