--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -814,39 +814,42 @@ h4,
 }
 
 .hr-list {
+  --h: 54vh;
   bottom: var(--p);
   width: 100%;
-  height: 50vh;
+  height: var(--h);
 
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .card--info {
   position: relative;
-  height: 100%;
   width: 100%;
+  height: var(--h);
   padding: 36px;
   color: var(--navy);
   background-color: transparent;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-
+  overflow: hidden;
   box-shadow: none;
   z-index: 1;
 }
 .card--info * {
-  transition: 400ms ease-out !important;
+  transition: 600ms ease-out !important;
 }
 .hr-list:first-of-type::before {
   content: "";
   position: absolute;
   width: calc(100% - var(--mn-pad) * 2);
   box-shadow: 0 0 16px 4px #1d1d495e;
-  height: 50vh;
+  height: calc(var(--h) - 2vh);
 }
 
 .card__head {
@@ -860,12 +863,13 @@ h4,
 .card--info .card__img {
   position: absolute;
   top: -10px;
+  bottom: -10px;
   width: 100%;
   height: 110%;
-  filter: grayscale(100%) brightness(120%);
+  filter: grayscale(100%);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 
-  opacity: 0.2;
+  opacity: 1;
   z-index: -1;
 }
 /* CLIPPING */
@@ -877,16 +881,16 @@ h4,
 .card--info:nth-of-type(2) .card__img {
   width: 100%;
   height: 140%;
-  left: -9%;
-  clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%);
+  left: -10%;
+  clip-path: polygon(30% 0, 100% 0, 100% 100%, 5% 100%);
 }
 .card--info:first-of-type {
-  width: 120%;
+  width: 115%;
   background-color: transparent;
 }
 .card--info:nth-of-type(2) {
-  width: 120%;
-  margin-left: -20%;
+  width: 140%;
+  margin-left: -30%;
   padding-left: 30%;
 }
 .card--info:nth-of-type(2) .card__img {
@@ -895,8 +899,8 @@ h4,
 }
 
 .card--info:hover .card__img {
-  filter: grayscale(10%) brightness(100%);
-  opacity: 0.4;
+  transform: scale(1.04);
+  filter: grayscale(90%) brightness(100%);
 }
 
 details {
@@ -1141,7 +1145,7 @@ address {
   transform: rotate(180deg);
 }
 
-.modal .list__item{
+.modal .list__item {
   border: 1px solid rgba(242, 242, 249, 0.479);
 }
 
@@ -1358,6 +1362,12 @@ address {
   clip-path: none;
 }
 /* REGION: Mobile */
+@media screen and (max-width: 800px) {
+  .hero {
+    width: 60vw;
+  }
+}
+
 @media screen and (max-width: 678px) {
   :root {
     --mn-pad: 6vw;
