--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -849,7 +849,7 @@ h4,
   position: absolute;
   width: calc(100% - var(--mn-pad) * 2);
   box-shadow: 0 0 16px 4px #1d1d495e;
-  height: calc(var(--h) - 2vh);
+  height: calc(var(--h));
 }
 
 .card__head {
@@ -1040,7 +1040,17 @@ address {
 .modal--small {
   width: 50vw;
   height: 50vh;
-  min-height: 45vh;
+  background-color: #fff;
+  box-shadow: 0 0 26px rgba(0, 0, 0, 0.16);
+}
+.toasty {
+  width: 30vw;
+  height: 40vh;
+  margin-left: 0;
+}
+.toasty::backdrop,
+.toasty .backdrop {
+  opacity: 0.5;
 }
 
 .modal--small .modal__text {
@@ -1508,7 +1518,7 @@ address {
     grid-auto-flow: row;
     grid-template: 1fr 1fr/ 1fr;
     grid-gap: 0px;
-    height: 50vh;
+    height: var(--h);
     margin-top: 0;
   }
 
