--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ a:hover {
   justify-content: space-between;
   align-items: center;
   z-index: 2;
-  background-color: rgba(255, 255, 255, 0.39);
+  background-color: rgba(255, 255, 255, 0.16);
 }
 
 .nav--up {
@@ -1015,6 +1015,37 @@ address {
 }
 
 /* MODAL AND POPUPS */
+.loader {
+  --w: 30px;
+  --h: 30px;
+  position: fixed;
+  display: none;
+  width: var(--w);
+  height: var(--h);
+  margin-top: calc(100vh - var(--mn-pad));
+  margin-left: calc(100vw - var(--mn-pad));
+  border-radius: 50%;
+  border: 4px solid var(--navy);
+  border-style: dashed;
+  mix-blend-mode: difference;
+  animation: spin infinite 1000ms linear;
+  z-index: 99999;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+  0% {
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+}
 .modal {
   /* safe width, respect the main container padding*/
   --w: calc(100vw - var(--mn-pad) * 2);
@@ -1024,7 +1055,7 @@ address {
   left: 50%;
   width: 100vw;
   height: 100vh;
-  background-color: hsla(240, 100%, 100%, 0.95);
+  background-color: hsla(240, 100%, 100%, 0.93);
   padding: var(--sm-pad);
   display: flex;
   flex-direction: column;
@@ -1052,7 +1083,12 @@ address {
 .toasty .backdrop {
   opacity: 0.5;
 }
-
+.toasty .modal__text {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 .modal--small .modal__text {
   height: 100%;
 }
