--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1027,7 +1027,6 @@ address {
   border-radius: 50%;
   border: 4px solid var(--navy);
   border-style: dashed;
-  mix-blend-mode: difference;
   animation: spin infinite 1000ms linear;
   z-index: 99999;
 }
@@ -1055,7 +1054,7 @@ address {
   left: 50%;
   width: 100vw;
   height: 100vh;
-  background-color: hsla(240, 100%, 100%, 0.93);
+  background-color: hsla(240, 100%, 100%, 0.9);
   padding: var(--sm-pad);
   display: flex;
   flex-direction: column;
@@ -1075,7 +1074,7 @@ address {
   box-shadow: 0 0 26px rgba(0, 0, 0, 0.16);
 }
 .toasty {
-  width: 30vw;
+  width: 40vw;
   height: 40vh;
   margin-left: 0;
 }
@@ -1295,8 +1294,12 @@ address {
   animation: fadeIn 400ms;
 }
 
-.modal + .backdrop,
-.modal::backdrop {
+.modal + .backdrop {
+  opacity: 0;
+}
+.modal[open] + .backdrop,
+.modal[open]::backdrop {
+  opacity: 1;
   background-image: linear-gradient(
     to bottom right,
     rgba(255, 255, 255, 0.671),
