FIxed project preview height again... I think!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1332,7 +1332,7 @@ address {
 }
 .project__list {
   width: calc(100vw + var(--sm-pad));
-  height: 90% !important;
+  height: 50vh;
   overflow: scroll;
 }
 
