--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1036,16 +1036,41 @@ address {
   animation: spin infinite 1000ms linear;
   z-index: 99999;
 }
-.cart {
-  width: 4rem;
+.cart-counter {
+  width: 6rem;
   height: 2rem;
   position: fixed;
-  background-color: red;
-  border-radius: 2rem;
+  border-radius: 4px;
   margin-top: calc(100vh - var(--mn-pad));
-  margin-left: calc(100vw - var(--mn-pad));
-  margin-left: calc(50vw - 2rem);
+  margin-left: calc(100vw - var(--mn-pad) * 2);
+  /* margin-left: calc(50vw - 2rem); */
   z-index: 9999999999;
+
+  display: grid;
+  place-content: center;
+
+  font-family: inherit;
+  font-weight: bold;
+  text-align: center;
+  color: var(--navy);
+
+  cursor: pointer;
+  transition: all 4000ms ease-out linear;
+}
+.cart-counter:empty {
+  margin-top: 110vh;
+}
+.cart-counter:not(:empty) {
+  margin-top: calc(100vh - var(--mn-pad));
+}
+
+.cart-counter::after {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--gold);
 }
 
 @keyframes spin {
