--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1037,7 +1037,8 @@ address {
   z-index: 99999;
 }
 .cart-counter {
-  width: 6rem;
+  --w: 6rem;
+  width: var(--w);
   height: 2rem;
   position: fixed;
   border-radius: 4px;
@@ -1583,7 +1584,27 @@ address {
     width: 100vw;
     height: 100vh;
   }
-
+  #hero__form {
+    width: 100%;
+    grid-template-columns: 1fr 6rem;
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.16);
+    overflow: hidden;
+  }
+  #hero__form .btn::before,
+  #hero__form .btn::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--gold);
+  }
+  #hero__form .btn::after {
+    content: "SUBMIT";
+    display: grid;
+    place-content: center;
+  }
   .wide-list {
     --card-width: calc((var(--w) - var(--gap)) / 1.3);
   }
@@ -1731,9 +1752,10 @@ address {
     width: 100%;
   }
 
-  .cart {
+  .cart-counter {
     transform: none;
-    margin-top: calc(100vh - var(--mn-pad) * 2);
+    margin-left: calc(50vw - var(--w) / 2);
+    margin-top: calc(100vh - var(--mn-pad) * 2) !important;
   }
 }
 
