fixed enqForm mobile padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -681,6 +681,7 @@ h4,
   padding-top: 16px;
   height: 100%;
   min-height: 20vh;
+  resize: none;
 }
 
 .form__submit {
@@ -1622,6 +1623,13 @@ address {
     width: 100%;
   }
 
+  .enquiry__group {
+    padding: 4rem 2rem;
+  }
+
+  .input--area {
+    min-height: 50vh;
+  }
   .hr-list {
     flex-direction: column;
     grid-auto-flow: row;
