--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,7 @@ a:hover {
   content: "";
   width: 100%;
   height: 100%;
-  iackground-color: transparent;
+  background-color: transparent;
   position: absolute;
   opacity: 0.5;
   background-color: var(--light);
