--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1125,7 +1125,7 @@ address {
   justify-content: space-between;
 
   border: none;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   transform-origin: center;
   overflow: hidden;
   z-index: 9999;
