--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1125,7 +1125,7 @@ address {
   justify-content: space-between;
 
   border: none;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%);
   transform-origin: center;
   overflow: hidden;
   z-index: 9999;
@@ -1181,6 +1181,7 @@ address {
 .modal--fullscreen {
   width: 100vw;
   height: 100vh;
+  transform: translateY(0);
 }
 .modal--large {
   width: var(--w);
